2006-03-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JInternalFrame.java
	(setSelected): Repaint frame when it is showing and the selection
	state changes.

2006-03-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/AbstractButton.java
	(AbstractAccessibleButton.getAccessibleRelationSet): Return super....()
	instead of null.

2006-03-13  Roman Kennke  <kennke@aicas.com>

	* javax/accessibility/AccessibleContext.java
	(getAccessibleRelationSet): Return empty set instead of null.

2006-03-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/ImageIcon.java
	(loadImage): Remove completed images from the MediaTracker. This
	avoids a potential memory leak.

2006-03-12  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/MultiDocPrintService.java, 
	* javax/print/MultiDocPrintJob.java, 
	* javax/print/MultiDoc.java: Added and enhanced documentation.

2006-03-12  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* java/rmi/activation/ActivationID.java (uid): New field.
	(writeExternal, readExternal): New methods. 
	(equals, hashCode): Rewritten.
	* java/rmi/activation/ActivationInstantiator.java,
	* java/rmi/activation/ActivationSystem.java,
	* java/rmi/activation/Activator.java,
	* java/rmi/activation/Activatable.java,
	* java/rmi/activation/ActivationGroup.java,
	* java/rmi/activation/ActivationGroupDesc.java: 
	Documented and autoformatted.
	* java/rmi/activation/package.html: Added content.
	
2006-03-12  Chris Burdess  <dog@gnu.org>

	Fixes PR 26652
	* gnu/xml/stream/XMLParser.java: Fix for case when both reader and
	  encoding are specified.

2006-03-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/DefaultSingleSelectionModel.java: API docs all over, plus
	(changeEvent): Initialise in fireStateChange(),
	(setSelectedIndex): Check if change is made before firing event,
	(clearSelection): Delegate to setSelectedIndex(),
	(fireStateChanged): Initialise changeEvent if necessary,
	* javax/swing/SingleSelectionModel.java: API docs all over.
