@@ -41,7 +41,12 @@ package java.rmi.activation;
 
 import java.io.Serializable;
 import java.rmi.MarshalledObject;
+import java.util.Arrays;
+import java.util.Enumeration;
+import java.util.Iterator;
 import java.util.Properties;
+import java.util.TreeSet;
+import java.util.zip.Adler32;
 
 /**
  * Contains information, necessary to create of recreate the activation objects.
@@ -57,15 +62,19 @@ import java.util.Properties;
  * expectes the group class to have the two parameter constructor, the first
  * parameter being the {@link ActivationGroupID} and the second the
  * {@link MarshalledObject}.
+ * 
+ * @author Audrius Meskauskas (audriusa@bioinformatics.org) (from stub)
  */
 public final class ActivationGroupDesc
     implements Serializable
 {
   /**
-   * Use the SVUID for interoperability.
+   * Contains the startup options for the {@link ActivationGroup}
+   * implementations. Allows to override system properties and specify other
+   * options for the implementation groups.
+   * 
+   * @author Audrius Meskauskas (audriusa@bioinformatics.org) (from stub)
    */
-  static final long serialVersionUID = - 4936225423168276595L;
-
   public static class CommandEnvironment
       implements Serializable
   {
@@ -74,108 +83,346 @@ public final class ActivationGroupDesc
      * Use the SVUID for interoperability.
      */
     static final long serialVersionUID = 6165754737887770191L;
+    
+    /**
+     * The zero size string array used as argv value when null is passed.
+     */
+    private static final String[] NO_ARGS = new String[0];
 
-    private String cmdpath;
-
-    private String[] argv;
-
+    /**
+     * The path to the java executable (or null for using default jre).
+     */
+    final String command;
+    
+    /**
+     * The extra parameters (may be empty array but never null).
+     */
+    final String[] options;
+    
+    /**
+     * Create the new command environment.
+     * 
+     * @param commandPatch the full path (and name) to the java executable of
+     *          null for using the default executable.
+     * @param args extra options that will be used when creating the activation
+     *          group. Null has the same effect as the empty list.
+     */
     public CommandEnvironment(String commandPatch, String[] args)
     {
-      cmdpath = commandPatch;
-      argv = args;
+      command = commandPatch;
+      if (args != null)
+        options = args;
+      else
+        options = NO_ARGS;
     }
-
+    
+    /**
+     * Get the path to the java executable.
+     * 
+     * @return the path to the java executable or null for using the default
+     * jre.
+     */
     public String getCommandPath()
     {
-      return cmdpath;
+      return command;
     }
-
+     
+    /**
+     * Get the additional command options.
+     * 
+     * @return the command options array, may be empty string
+     */
     public String[] getCommandOptions()
     {
-      return argv;
+      return options;
     }
-
+    
+    /**
+     * Compare for content equality.
+     */
     public boolean equals(Object obj)
     {
-      if (! (obj instanceof CommandEnvironment))
+      if (obj instanceof CommandEnvironment)
         {
-          return (false);
-        }
-      CommandEnvironment that = (CommandEnvironment) obj;
+          CommandEnvironment that = (CommandEnvironment) obj;
 
-      if (! this.cmdpath.equals(that.cmdpath))
-        {
-          return (false);
-        }
-
-      int len = this.argv.length;
-      if (len != that.argv.length)
-        {
-          return (false);
-        }
-      for (int i = 0; i < len; i++)
-        {
-          if (! this.argv[i].equals(that.argv[i]))
+          if (command == null || that.command == null)
             {
-              return (false);
+              // Use direct comparison if null is involved.
+              if (command != that.command)
+                return false;
             }
+          else
+            {
+              // Use .equals if null is not involved.
+              if (! this.command.equals(that.command))
+                return false;
+            }
+
+          return Arrays.equals(options, that.options);
         }
-      return (true);
+      else
+        return false;
     }
 
+    /**
+     * Get the hash code.
+     */
     public int hashCode()
     {
-      return cmdpath.hashCode(); // Not a very good hash code.
+      int h = command == null ? 0 : command.hashCode();
+      for (int i = 0; i < options.length; i++)
+        h ^= options[i].hashCode();
+
+      return h;
     }
-
   }
-
-  public ActivationGroupDesc(Properties overrides,
-                             ActivationGroupDesc.CommandEnvironment cmd)
+  
+  /**
+   * Use the SVUID for interoperability.
+   */
+  static final long serialVersionUID = - 4936225423168276595L;
+  
+  /**
+   * The group class name or null for the default group class implementation.
+   */
+  final String className;
+  
+  /**
+   * The group class download location URL (codebase), ignored by the
+   * default implementation. 
+   */
+  final String location;
+  
+  /**
+   * The group initialization data.
+   */
+  final MarshalledObject data;
+  
+  /**
+   * The path to the group jre and the parameters of this jre, may be
+   * null for the default jre.
+   */
+  final ActivationGroupDesc.CommandEnvironment env;
+  
+  /**
+   * The properties that override the system properties.
+   */
+  final Properties props;
+  
+  /**
+   * The cached hash code.
+   */
+  transient long hash;
+  
+  /**
+   * Create the new activation group descriptor.
+   * 
+   * @param aProperties the properties that override the system properties
+   * @param environment the command line (and parameters), indicating, where to
+   *          find the jre executable and with that parameters to call it. May
+   *          be null if the default executable should be used. In this case,
+   *          the activation group with the null name (the system default group)
+   *          will be created.
+   */
+  public ActivationGroupDesc(Properties aProperties,
+                             ActivationGroupDesc.CommandEnvironment environment)
   {
-    throw new Error("Not implemented");
+    this(null, null, null, aProperties, environment);
   }
-
-  public ActivationGroupDesc(String className, String location,
-                             MarshalledObject data, Properties overrides,
-                             ActivationGroupDesc.CommandEnvironment cmd)
+  
+  /**
+   * Create the new activation group descriptor.
+   * 
+   * @param aClassName the name of the group implementation class. The null
+   *          value indicates the default implementation.
+   * @param aLocation the location, from where the group implementation class
+   *          should be loaded (ignored for the system default implementation).
+   * @param aData the group intialization data
+   * @param aProperties the properties that will override the system properties
+   *          of the new group. These properties will be translated into -D
+   *          options.
+   * @param environment the record, containing path to the jre executable and
+   *          start options for the jre or null for using the default jre and
+   *          options.
+   */
+  public ActivationGroupDesc(String aClassName, String aLocation,
+                             MarshalledObject aData, Properties aProperties,
+                             ActivationGroupDesc.CommandEnvironment environment)
   {
-    throw new Error("Not implemented");
+    className = aClassName;
+    location = aLocation;
+    data = aData;
+    props = aProperties;
+    env = environment;
   }
-
+  
+  /**
+   * Get the activation group class name.
+   * 
+   * @return the activation group class name (null for default implementation)
+   */
   public String getClassName()
   {
-    throw new Error("Not implemented");
+    return className;
   }
-
+  
+  /**
+   * Get the location, from where the group class will be loaded
+   * 
+   * @return the location, from where the implementation should be loaded (null
+   *         for the default implementation)
+   */
   public String getLocation()
   {
-    throw new Error("Not implemented");
+    return location;
   }
-
+  
+  /**
+   * Get the group intialization data.
+   * 
+   * @return the group intialization data in the marshalled form.
+   */
   public MarshalledObject getData()
   {
-    throw new Error("Not implemented");
+    return data;
   }
 
+  /**
+   * Get the overridded system properties.
+   * 
+   * @return the overridden group system properties.
+   */
   public Properties getPropertyOverrides()
   {
-    throw new Error("Not implemented");
+    return props;
   }
-
+  
+  /**
+   * Get the group command environment, containing path to the jre executable
+   * and startup options.
+   * 
+   * @return the command environment or null if the default environment should
+   *         be used.
+   */
   public ActivationGroupDesc.CommandEnvironment getCommandEnvironment()
   {
-    throw new Error("Not implemented");
+    return env;
   }
-
+  
+  /**
+   * Compare for the content equality.
+   */
   public boolean equals(Object obj)
   {
-    throw new Error("Not implemented");
-  }
+    if (obj instanceof ActivationGroupDesc)
+      {
+        ActivationGroupDesc that = (ActivationGroupDesc) obj;
 
+        // Ensure the hashcodes are computed.
+        if (hash == 0)
+          hashCode();
+        if (that.hash == 0)
+          that.hashCode();
+
+        // We compare the hash fields as they are type long rather than int.
+        if (hash != that.hash)
+          return false;
+
+        if (! eq(className, that.className))
+          return false;
+        if (! eq(data, that.data))
+          return false;
+        if (! eq(env, that.env))
+          return false;
+        if (! eq(location, that.location))
+          return false;
+
+        // Compare the properties.
+        if (eq(props, that.props))
+          return true;
+
+        if (props.size() != that.props.size())
+          return false;
+
+        Enumeration en = props.propertyNames();
+        Object key, value;
+
+        while (en.hasMoreElements())
+          {
+            key = en.nextElement();
+            if (! that.props.containsKey(key))
+              return false;
+            if (! eq(props.get(key), that.props.get(key)))
+              return false;
+          }
+        return true;
+      }
+    else
+      return false;
+  }
+  
+  /**
+   * Compare for direct equality if one or both parameters are null, otherwise
+   * call .equals.
+   */
+  static boolean eq(Object a, Object b)
+  {
+    if (a == null || b == null)
+      return a == b;
+    else
+      return a.equals(b);
+  }
+  
+  /**
+   * Return the hashcode.
+   */
   public int hashCode()
   {
-    throw new Error("Not implemented");
+    if (hash==0)
+      {
+        // Using Adler32 - the hashcode is cached, will be computed only
+        // once and due need to scan properties is the expensive operation
+        // anyway. Reliability is more important.
+        Adler32 adler = new Adler32();
+        if (className!=null)
+          adler.update(className.getBytes());
+        if (data!=null)
+          adler.update(data.hashCode());
+        if (env!=null)
+          adler.update(env.hashCode());
+        if (location!=null)
+          adler.update(location.getBytes());
+        if (props!=null)
+          {
+            Enumeration en = props.propertyNames();
+            
+            // Using the intermediate sorted set to ensure that the
+            // properties are sorted.
+            TreeSet pr = new TreeSet();
+            
+            Object key;
+            Object value;
+            while (en.hasMoreElements())
+              {
+                key = en.nextElement();
+                if (key!=null)
+                  pr.add(key);
+              }
+            
+            Iterator it = pr.iterator();
+            while (it.hasNext())
+              {
+                key = it.next();
+                value = props.get(key);
+                adler.update(key.hashCode());
+                if (value!=null)
+                  adler.update(value.hashCode());
+              }
+          }
+          hash = adler.getValue();
+        }
+    return (int) hash;
   }
 
 }
