@@ -62,5 +62,7 @@ this special constructor. The remote object implementation may use the
 activation data to initialize itself in a needed manner. The remote object may
 also retain its activation identifier, so that it can inform the activation 
 group when it becomes inactive (via a call to the Activatable.inactive method).
+
+@author Audrius Meskauskas (audriusa@bioinformatics.org) (from empty)
 </body>
 </html>
